--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 
     <groupId>org.zalando</groupId>
     <artifactId>problem-spring-web</artifactId>
-    <version>0.6.0-SNAPSHOT</version>
+    <version>0.6.0</version>
 
     <name>Problem: Spring Web</name>
     <description>Spring Controller Advices for Problems</description>
