--- a/pom.xml
+++ b/pom.xml
@@ -56,9 +56,9 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
 
-        <spring.version>4.2.5.RELEASE</spring.version>
-        <problem.version>0.7.0</problem.version>
-        <jackson.version>2.6.1</jackson.version>
+        <spring.version>4.3.2.RELEASE</spring.version>
+        <problem.version>0.10.0</problem.version>
+        <jackson.version>2.8.2</jackson.version>
     </properties>
 
     <dependencies>
@@ -66,6 +66,11 @@
             <groupId>com.google.code.findbugs</groupId>
             <artifactId>jsr305</artifactId>
             <version>3.0.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>19.0</version>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
