--- a/pom.xml
+++ b/pom.xml
@@ -59,7 +59,7 @@
         <spring.version>4.3.2.RELEASE</spring.version>
         <spring-security.version>4.1.3.RELEASE</spring-security.version>
         <problem.version>0.11.0</problem.version>
-        <jackson.version>2.8.2</jackson.version>
+        <jackson.version>2.8.9</jackson.version>
     </properties>
 
     <dependencies>
@@ -110,6 +110,11 @@
             <groupId>org.zalando</groupId>
             <artifactId>jackson-datatype-problem</artifactId>
             <version>${problem.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.zalando</groupId>
+            <artifactId>faux-pas</artifactId>
+            <version>0.3.1</version>
         </dependency>
         <dependency>
             <groupId>javax.validation</groupId>
@@ -227,6 +232,12 @@
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
             <version>2.1.0-beta.120</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.dataformat</groupId>
+            <artifactId>jackson-dataformat-xml</artifactId>
+            <version>${jackson.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
