--- a/pom.xml
+++ b/pom.xml
@@ -56,12 +56,12 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
 
-        <spring.version>4.3.10.RELEASE</spring.version>
+        <spring.version>4.3.12.RELEASE</spring.version>
         <spring-security.version>4.2.3.RELEASE</spring-security.version>
-        <problem.version>0.20.0</problem.version>
-        <jackson.version>2.8.10</jackson.version>
-        <junit-platform.version>1.0.0-RC3</junit-platform.version>
-        <junit-jupiter.version>5.0.0-RC3</junit-jupiter.version>
+        <problem.version>0.20.1</problem.version>
+        <jackson.version>2.9.3</jackson.version>
+        <junit-platform.version>1.0.3</junit-platform.version>
+        <junit-jupiter.version>5.0.3</junit-jupiter.version>
     </properties>
 
     <dependencies>
@@ -78,7 +78,7 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>1.16.18</version>
+            <version>1.16.20</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
@@ -109,6 +109,11 @@
             <version>${problem.version}</version>
         </dependency>
         <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>${jackson.version}</version>
+        </dependency>
+        <dependency>
             <groupId>org.zalando</groupId>
             <artifactId>jackson-datatype-problem</artifactId>
             <version>${problem.version}</version>
@@ -116,7 +121,7 @@
         <dependency>
             <groupId>org.zalando</groupId>
             <artifactId>faux-pas</artifactId>
-            <version>0.4.0</version>
+            <version>0.5.0</version>
         </dependency>
         <dependency>
             <groupId>javax.validation</groupId>
@@ -158,7 +163,7 @@
         <dependency>
             <groupId>com.github.sbrannen</groupId>
             <artifactId>spring-test-junit5</artifactId>
-            <version>1.0.0.M6</version>
+            <version>1.0.3</version>
             <scope>test</scope>
         </dependency>
         <dependency>
