--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>org.zalando</groupId>
     <artifactId>problem-spring-web</artifactId>
-    <version>0.23.0-SNAPSHOT</version>
+    <version>0.22.3</version>
 
     <name>Problem: Spring Web</name>
     <description>Spring Controller Advices for Problems</description>
