Made surefire print test failures to console

--- a/pom.xml
+++ b/pom.xml
@@ -351,6 +351,7 @@
                     <parallel>classesAndMethods</parallel>
                     <threadCount>1</threadCount>
                     <perCoreThreadCount>true</perCoreThreadCount>
+                    <useFile>false</useFile>
                 </configuration>
                 <dependencies>
                     <dependency>
