--- a/pom.xml
+++ b/pom.xml
@@ -307,9 +307,9 @@
                 </configuration>
             </plugin>
             <plugin>
-                <groupId>com.ning.maven.plugins</groupId>
-                <artifactId>maven-duplicate-finder-plugin</artifactId>
-                <version>1.0.9</version>
+                <groupId>org.basepom.maven</groupId>
+                <artifactId>duplicate-finder-maven-plugin</artifactId>
+                <version>1.3.0</version>
                 <executions>
                     <execution>
                         <phase>validate</phase>
@@ -319,9 +319,9 @@
                         <configuration>
                             <failBuildInCaseOfDifferentContentConflict>true</failBuildInCaseOfDifferentContentConflict>
                             <failBuildInCaseOfEqualContentConflict>false</failBuildInCaseOfEqualContentConflict>
-                            <ignoredResources>
-                                <ignoredResource>.*</ignoredResource>
-                            </ignoredResources>
+                            <ignoredResourcePatterns>
+                                <ignoredResourcePattern>.*</ignoredResourcePattern>
+                            </ignoredResourcePatterns>
                         </configuration>
                     </execution>
                 </executions>
