--- a/problem-spring-common/pom.xml
+++ b/problem-spring-common/pom.xml
@@ -11,7 +11,7 @@
 
     <artifactId>problem-spring-common</artifactId>
 
-    <name>Problem: Spring common</name>
+    <name>Problem: Spring Common</name>
     <description>Spring common Advices for Problems</description>
 
 
