Fixed duplicate module-info

--- a/pom.xml
+++ b/pom.xml
@@ -269,6 +269,9 @@
                         <configuration>
                             <failBuildInCaseOfDifferentContentConflict>true</failBuildInCaseOfDifferentContentConflict>
                             <failBuildInCaseOfEqualContentConflict>false</failBuildInCaseOfEqualContentConflict>
+                            <ignoredClassPatterns>
+                                <ignoredClassPattern>.*/module-info</ignoredClassPattern>
+                            </ignoredClassPatterns>
                             <ignoredResourcePatterns>
                                 <ignoredResourcePattern>.*</ignoredResourcePattern>
                             </ignoredResourcePatterns>
