--- a/pom.xml
+++ b/pom.xml
@@ -106,6 +106,11 @@
             <version>${problem.version}</version>
         </dependency>
         <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>${jackson.version}</version>
+        </dependency>
+        <dependency>
             <groupId>org.zalando</groupId>
             <artifactId>faux-pas</artifactId>
             <version>0.8.0</version>
@@ -309,13 +314,6 @@
                     <perCoreThreadCount>true</perCoreThreadCount>
                     <useFile>false</useFile>
                 </configuration>
-                <dependencies>
-                    <dependency>
-                        <groupId>org.junit.platform</groupId>
-                        <artifactId>junit-platform-surefire-provider</artifactId>
-                        <version>${junit-platform.version}</version>
-                    </dependency>
-                </dependencies>
             </plugin>
             <plugin>
                 <groupId>org.jacoco</groupId>
