--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,8 @@
         <module>problem-violations</module>
         <module>problem-spring-common</module>
         <module>problem-spring-web</module>
+        <module>problem-spring-web-starter</module>
+        <module>problem-spring-web-autoconfigure</module>
     </modules>
 
     <developers>
@@ -62,6 +64,7 @@
         <problem.version>0.23.0</problem.version>
         <spring.version>5.1.9.RELEASE</spring.version>
         <spring-security.version>5.1.6.RELEASE</spring-security.version>
+        <spring-boot.version>2.1.7.RELEASE</spring-boot.version>
         <junit-jupiter.version>5.5.1</junit-jupiter.version>
     </properties>
 
