--- a/problem-spring-web-autoconfigure/pom.xml
+++ b/problem-spring-web-autoconfigure/pom.xml
@@ -55,6 +55,18 @@
             <version>${spring-boot.version}</version>
             <optional>true</optional>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-config</artifactId>
+            <version>${spring-security.version}</version>
+            <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-web</artifactId>
+            <version>${spring-security.version}</version>
+            <optional>true</optional>
+        </dependency>
 
         <dependency>
             <groupId>${project.groupId}</groupId>
