--- a/problem-spring-web-autoconfigure/pom.xml
+++ b/problem-spring-web-autoconfigure/pom.xml
@@ -69,7 +69,7 @@
         </dependency>
 
         <dependency>
-            <groupId>${project.groupId}</groupId>
+            <groupId>org.zalando</groupId>
             <artifactId>problem-spring-web</artifactId>
             <version>${project.version}</version>
             <optional>true</optional>
