--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>org.zalando</groupId>
     <artifactId>problem-spring-parent</artifactId>
-    <version>0.26.0-SNAPSHOT</version>
+    <version>0.25.2</version>
     <packaging>pom</packaging>
 
     <name>Problem: Spring Parent</name>
