--- a/problem-spring-webflux/pom.xml
+++ b/problem-spring-webflux/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>org.zalando</groupId>
         <artifactId>problem-spring-parent</artifactId>
-        <version>0.25.2</version>
+        <version>0.26.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>problem-spring-webflux</artifactId>
