Excluded duplicate dependency

--- a/pom.xml
+++ b/pom.xml
@@ -222,6 +222,12 @@
             <artifactId>hibernate-validator</artifactId>
             <version>6.1.0.Final</version>
             <scope>test</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>jakarta.validation</groupId>
+                    <artifactId>jakarta.validation-api</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>org.apache.tomcat.embed</groupId>
