--- a/pom.xml
+++ b/pom.xml
@@ -2,21 +2,15 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
     <groupId>org.zalando</groupId>
     <artifactId>problem-spring-parent</artifactId>
     <version>0.26.0-SNAPSHOT</version>
     <packaging>pom</packaging>
-
-    <name>Problem: Spring Parent</name>
     <url>https://github.com/zalando/problem-spring-web</url>
-
     <organization>
         <name>Zalando SE</name>
     </organization>
-
     <inceptionYear>2015</inceptionYear>
-
     <licenses>
         <license>
             <name>MIT License</name>
@@ -24,7 +18,6 @@
             <distribution>repo</distribution>
         </license>
     </licenses>
-
     <modules>
         <module>problem-violations</module>
         <module>problem-spring-common</module>
@@ -32,7 +25,6 @@
         <module>problem-spring-web-starter</module>
         <module>problem-spring-web-autoconfigure</module>
     </modules>
-
     <developers>
         <developer>
             <name>Lukas Niemeier</name>
@@ -47,13 +39,11 @@
             <organizationUrl>https://tech.zalando.com/</organizationUrl>
         </developer>
     </developers>
-
     <scm>
         <url>https://github.com/zalando/problem-spring-web</url>
         <connection>scm:git:git@github.com:zalando/problem-spring-web.git</connection>
         <developerConnection>scm:git:git@github.com:zalando/problem-spring-web.git</developerConnection>
     </scm>
-
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
@@ -68,7 +58,6 @@
         <spring-boot.version>2.2.1.RELEASE</spring-boot.version>
         <junit-jupiter.version>5.5.2</junit-jupiter.version>
     </properties>
-
     <dependencies>
         <dependency>
             <groupId>org.apiguardian</groupId>
@@ -267,7 +256,6 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
-
     <build>
         <plugins>
             <plugin>
@@ -351,6 +339,7 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.22.2</version>
                 <configuration>
+                    <failIfNoTests>true</failIfNoTests>
                     <parallel>classesAndMethods</parallel>
                     <threadCount>1</threadCount>
                     <perCoreThreadCount>true</perCoreThreadCount>
@@ -416,7 +405,6 @@
             </plugin>
         </plugins>
     </build>
-
     <distributionManagement>
         <snapshotRepository>
             <id>ossrh</id>
@@ -427,7 +415,6 @@
             <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
         </repository>
     </distributionManagement>
-
     <profiles>
         <profile>
             <id>webflux</id>
@@ -500,5 +487,4 @@
             </build>
         </profile>
     </profiles>
-
 </project>
