--- a/problem-spring-web-autoconfigure/pom.xml
+++ b/problem-spring-web-autoconfigure/pom.xml
@@ -8,12 +8,7 @@
         <artifactId>problem-spring-parent</artifactId>
         <version>0.26.0-SNAPSHOT</version>
     </parent>
-
     <artifactId>problem-spring-web-autoconfigure</artifactId>
-
-    <name>Problem: Spring Web Autoconfiguration</name>
-    <description>Spring autoconfiguration module for Problem Spring Web</description>
-
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -63,12 +58,27 @@
             <version>${spring-security.version}</version>
             <optional>true</optional>
         </dependency>
-
         <dependency>
             <groupId>org.zalando</groupId>
             <artifactId>problem-spring-web</artifactId>
             <version>${project.version}</version>
             <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <version>${spring-boot.version}</version>
+            <scope>test</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.hamcrest</groupId>
+                    <artifactId>hamcrest</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>ch.qos.logback</groupId>
+                    <artifactId>logback-classic</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
     </dependencies>
 </project>
