migrate to central portal publishing

--- a/problem-spring-web/pom.xml
+++ b/problem-spring-web/pom.xml
@@ -8,6 +8,7 @@
         <version>0.29.2-SNAPSHOT</version>
     </parent>
     <artifactId>problem-spring-web</artifactId>
+    <name>${artifactId}</name>
     <dependencies>
 
         <dependency>
