--- a/problem-spring-web-autoconfigure/pom.xml
+++ b/problem-spring-web-autoconfigure/pom.xml
@@ -9,6 +9,7 @@
         <version>0.29.2-SNAPSHOT</version>
     </parent>
     <artifactId>problem-spring-web-autoconfigure</artifactId>
+    <name>${artifactId}</name>
     <dependencies>
         <dependency>
             <groupId>jakarta.servlet</groupId>
