--- a/problem-spring-web-starter/pom.xml
+++ b/problem-spring-web-starter/pom.xml
@@ -9,6 +9,7 @@
         <version>0.29.2-SNAPSHOT</version>
     </parent>
     <artifactId>problem-spring-web-starter</artifactId>
+    <name>${artifactId}</name>
     <dependencies>
         <dependency>
             <groupId>${project.groupId}</groupId>
