--- a/problem-spring-webflux/pom.xml
+++ b/problem-spring-webflux/pom.xml
@@ -8,6 +8,7 @@
         <version>0.29.2-SNAPSHOT</version>
     </parent>
     <artifactId>problem-spring-webflux</artifactId>
+    <name>${artifactId}</name>
     <dependencies>
 
         <dependency>
